--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/general-sans');
 @import 'tailwindcss';
 
-html,
+/* html,
 body {
 	overflow-x: hidden;
 	overflow-y: auto;
-}
+} */
 
 body {
 	font-family: 'General Sans', sans-serif;
@@ -62,7 +62,7 @@ body {
 @utility absolute-center {
 	@apply absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%];
 }
-.special-font b {
+@utility special-font {
 	font-family: 'zentry';
 	font-feature-settings: 'ss01' 1;
 }
@@ -108,6 +108,27 @@ body {
 
 @utility bento-title {
 	@apply uppercase md:text-6xl text-4xl font-black font-zentry;
+}
+
+@utility story-img-container {
+	@apply relative md:h-dvh h-[90vh] w-full;
+	filter: url('#flt_tag');
+}
+.story-img-container {
+}
+
+@utility story-img-mask {
+	@apply absolute left-0 top-0 size-full overflow-hidden md:left-[20%] md:top-[-10%] md:size-4/5;
+	clip-path: polygon(4% 0, 83% 21%, 100% 73%, 0% 100%);
+}
+
+@utility story-img-content {
+	@apply absolute w-full md:h-dvh h-[50dvh] opacity-100 left-10 top-16 md:left-0 md:top-10 lg:left-[-300px] lg:top-[-100px];
+	transform: translate3d(0, 0, 0) rotateX(0) rotateY(0) rotateZ(0) scale(1);
+}
+
+#story {
+	overflow: auto;
 }
 
 .three-body {
@@ -240,20 +261,7 @@ body {
 /* @layer utilities {
 
 
-	.story-img-container {
-		@apply relative md:h-dvh h-[90vh] w-full;
-		filter: url('#flt_tag');
-	}
-
-	.story-img-mask {
-		@apply absolute left-0 top-0 size-full overflow-hidden md:left-[20%] md:top-[-10%] md:size-4/5;
-		clip-path: polygon(4% 0, 83% 21%, 100% 73%, 0% 100%);
-	}
-
-	.story-img-content {
-		@apply absolute w-full md:h-dvh h-[50dvh] opacity-100 left-10 top-16 md:left-0 md:top-10 lg:left-[-300px] lg:top-[-100px];
-		transform: translate3d(0, 0, 0) rotateX(0) rotateY(0) rotateZ(0) scale(1);
-	}
+	
 
 	.gallery-img-container {
 		@apply size-64 overflow-hidden bg-violet-300;
